# Pulsim

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DELIVERY_REPORT.md  Dockerfile  Makefile  PLAN_validation_framework.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  versions.json
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt  v1_layer_map.json
core/include/pulsim/: advanced_solver.hpp  circuit.hpp  mna.hpp  parser.hpp  simulation.hpp  solver.hpp  types.hpp
core/include/pulsim/models/: control_blocks.hpp  magnetic_core.hpp  mosfet_models.hpp
core/include/pulsim/v1/: cblock_abi.h  circuit_graph.hpp  concepts.hpp  constexpr_utils.hpp  control.hpp  convergence_aids.hpp  core.hpp  cpp23_features.hpp  device_base.hpp  expression_templates.hpp  extensions.hpp  frequency_analysis.hpp  high_performance.hpp  integration.hpp  losses.hpp  numeric_types.hpp  profiling.hpp  robustness_profile.hpp  runtime_circuit.hpp  runtime_modules.hpp  simulation.hpp  solver.hpp  sources.hpp  thermal.hpp  transient_services.hpp  type_traits.hpp  validation.hpp
core/include/pulsim/v2/: circuit_graph.hpp  compat.hpp  concepts.hpp  constexpr_utils.hpp  convergence_aids.hpp  core.hpp  cpp23_features.hpp  device_base.hpp  expression_templates.hpp  high_performance.hpp  integration.hpp  numeric_types.hpp  solver.hpp  type_traits.hpp  validation.hpp
core/include/spicelab/: ac_analysis.hpp  advanced_solver.hpp  circuit.hpp  convergence_aids.hpp  devices.hpp  mna.hpp  parallel.hpp  parser.hpp  simulation.hpp  solver.hpp  spicelab.hpp  thermal.hpp  types.hpp
core/include/spicelab/fmu/: fmu_export.hpp
core/include/spicelab/models/: control_blocks.hpp  magnetic_core.hpp  mosfet_models.hpp
core/include/spicelab/parser/: spice_parser.hpp  subcircuit.hpp  yaml_parser.hpp
core/legacy/include/pulsim/: advanced_solver.hpp  circuit.hpp  parser.hpp  solver.hpp
core/legacy/src/: advanced_solver.cpp
core/legacy/src/parser/: spice_parser.cpp
core/src/: ac_analysis.cpp  advanced_solver.cpp  circuit.cpp  convergence_aids.cpp  devices.cpp  mna.cpp  parallel.cpp  parser.cpp  simulation.cpp  simulation_control.cpp  solver.cpp  thermal.cpp
core/src/fmu/: fmu_export.cpp
core/src/models/: control_blocks.cpp  magnetic_core.cpp  mosfet_models.cpp
core/src/parser/: spice_parser.cpp  subcircuit.cpp  yaml_parser.cpp
core/src/v1/: runtime_module_adapters.cpp  runtime_module_adapters.hpp  simulation.cpp  simulation_averaged.cpp  simulation_frequency.cpp  simulation_periodic.cpp  simulation_step.cpp  sundials_backend.cpp  sundials_backend.hpp  transient_services.cpp  yaml_parser.cpp
core/tests/: test_ac_analysis.cpp  test_ad_diode_stamp.cpp  test_ad_igbt_stamp.cpp  test_ad_linear_opt_out.cpp  test_ad_mosfet_stamp.cpp  test_ad_scalar.cpp  test_ad_stamp_perf.cpp  test_ad_validate.cpp  test_ad_vcswitch_stamp.cpp  test_advanced_solver.cpp  test_benchmarks.cpp  test_catalog_phase1_to_4.cpp  test_catalog_phase7_yaml_loader.cpp  test_catalog_phase8_validation.cpp  test_circuit.cpp  test_cli.cpp  test_concepts.cpp  test_convergence_aids.cpp  test_converter_templates.cpp  test_dc_motor_device.cpp  test_difficult_converters.cpp  test_extension_registry.cpp  test_frequency_analysis_phase1.cpp  test_frequency_analysis_phase2.cpp  test_frequency_analysis_phase3.cpp  test_frequency_analysis_phase4.cpp  test_frequency_analysis_phase7_yaml.cpp  test_frequency_analysis_phase8_validation.cpp  test_frequency_analysis_phase9_perf.cpp  test_grid_library.cpp  test_linear_cache_numeric_lru.cpp  test_linear_cache_phase6_benchmarks.cpp  test_linear_cache_symbolic_reuse.cpp  test_linear_solver_selection.cpp  test_magnetic_phase1_primitives.cpp  test_magnetic_phase2_saturable_inductor.cpp  test_magnetic_phase3_saturable_transformer.cpp  test_magnetic_phase4_hysteresis.cpp  test_magnetic_phase5_catalog.cpp  test_magnetic_phase6_validation.cpp  (+28 more)
core/tests/cblock/: test_constant.cpp  test_waveforms.cpp
examples/cpp/: 01_saturable_inductor.cpp  02_dc_motor_step.cpp  03_pmsm_foc.cpp  04_three_phase_pll.cpp  05_robustness_profile.cpp  CMakeLists.txt
python/: CMakeLists.txt  bindings.cpp  bindings_v2.cpp
python/pulsim/: __init__.py  __init__.pyi  _pulsim.pyi  cblock.py  frequency_analysis.py  magnetic_core.py  netlist.py  post_processing.py  signal_evaluator.py  templates.py  v2.pyi
python/pulsim/codegen/: __init__.py  generator.py
python/pulsim/fmu/: __init__.py  exporter.py
python/pulsim/remote/: __init__.py  client.py  widgets.py
python/pulsim/sweep/: __init__.py  distributions.py  metrics.py  runner.py
python/spicelab/: __init__.py
python/spicelab/remote/: __init__.py  client.py  simulator_pb2.py  simulator_pb2_grpc.py  widgets.py
python/tests/: __init__.py  conftest.py  test_advanced_solver_decision_matrix.py  test_advanced_solver_prototype_runner.py  test_api.py  test_benchmark_ltspice_runtime.py  test_benchmark_ngspice_runtime.py  test_benchmark_python_first.py  test_cblock.py  test_ci_release_workflows_cblock.py  test_ci_workflow_gate_adv.py  test_circuit.py  test_codegen.py  test_convergence_reference_examples.py  test_converter_templates.py  test_dc_motor_device.py  test_docs_release_config.py  test_fmu_export.py  test_freeze_kpi_baseline.py  test_frequency_analysis.py  test_gate_adv_decision.py  test_grpc_client.py  test_gui_component_parity.py  test_gui_integration.py  test_kpi_gate.py  test_local_limit_suite.py  test_magnetic_core_python_config.py  test_magnetic_core_theory.py  test_mixed_domain_blocks_extra.py  test_netlist_parser.py  test_parser.py  test_post_processing.py  test_runtime_bindings.py  test_runtime_module_replay.py  test_signal_evaluator.py  test_simulation.py  test_stress_suite.py  test_supported_components_catalog.py  test_sweep.py  test_thermal.py  (+5 more)
python/tests/properties/: __init__.py  strategies.py  test_energy.py  test_kcl.py  test_passivity.py  test_pwl_invariants.py
python/tests/validation/: __init__.py  conftest.py  test_thermal.py
python/tests/validation/framework/: __init__.py  analytical.py  base.py  comparator.py  (+2 more)
(+1260 files in other folders)
